# Protein-Annotator-v0.3

./: LICENSE  README.md  environment.yml  pyproject.toml
protein_annotator/: __init__.py  checks.py  cli.py  db.py  merge.py  parsers.py  pipeline.py  runners.py  scoring.py  simple_run.py  source_annotation.py  tables.py
